# FrontLine

./: .env.example  .gitignore  AI_DECISIONS.md  README.md  pyproject.toml  test_frontline.py
data/: ground_truth.jsonl  messages.jsonl  mock_200.jsonl
scripts/: generate_mock_200.py
src/frontline/: __init__.py  cli.py  env.py  eval.py  groq_client.py  hybrid.py  io.py  triage.py
src/frontline_triage.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_hybrid.py  test_mock_200.py  test_triage.py
